# whois-parser

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yml
tests/: conftest.py  test_whois_parser.py  utils.py
tests/fixtures/: example.me.txt  google.ae.txt  google.be.txt  google.co.jp.txt  google.com.txt  google.kr.txt  google.uk.txt
tests/parsers/: test_ae.py  test_base.py  test_be.py  test_jp.py  test_kr.py  test_me.py  test_uk.py
whois_parser/: __init__.py  dataclasses.py  parser.py  settings.py
whois_parser/parsers/: __init__.py  abstract.py  base.py  be.py  constants.py  jp.py  uk.py  utils.py
